  :class:`ValueError`.

- Methods of :class:`rpy2.rlike.container.OrdDict` now raise a
  :class:`NotImplementedError` when not implemented.

Bugs fixed
----------

- `aes` in :mod:`rpy2.robjects.lib.ggplot2` had stopped working with the
  R package ggplot2 reaching version 3.2.0. (issue #562).

- Better handling of recent :mod:`pandas` arrays with missing values
 (related to issue #544).


Release 3.0.5
=============

Bugs fixed
----------

- No longer allow installation if Python 3 but < 3.5.

- Fixed error `undefined symbol: DATAPTR` if R < 3.5 (issue #565).


Release 3.0.4
=============

Bugs fixed
----------

- Fixed conversion of `pandas` :class:`Series` of dtype `pandas.Int32Dtype`,
  or `pandas.Int64Dtype` (issue #544).


Release 3.0.3
=============

Bugs fixed
----------

- Fixed the evaluation of R code using the "R magic" was delaying all
  output to the end of the execution of that code, independently of
  whether the attribute `cache_display_data` was `True` or `False`
  (issue #543).

- Fixed conversion of :class:`pandas.Series` of `dtype` "object" when
  all items are either all of the same type or are :obj:`None` (issue #540).


Release 3.0.2
=============

Bugs fixed
----------

- Failing to import `pandas` or `numpy` when loading the "R magic" extension
  for jupyter/ipython was hiding the cause of the error in the `ImportError`
  exception.

- Fallback when an R `POSIXct` vector does not had an attribute `"tzone"`
  (issue #533).

- Callback for console reset was not set during R initialization.

- Fixed rternalized function returning rpy2 objects (issue #538).

- `--vanilla` is no longer among the default options used to initialize R
  (issue #534).


Release 3.0.1
=============

Bugs fixed
----------

- Script to install R packages for docker image never made it to version
  control.

- Conversion of R arrays/matrices into numpy object trigged a segfault
  during garbage collection (issue #524).


Release 3.0.0
=============

New features